--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,14 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
+/[Pp]ackages
 /[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+
+#Jetbrains files
+/.idea
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
